--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,9 +25,12 @@ jobs:
       - name: Publish
         run: dotnet publish --configuration Release -o ./publish ./MyFunctionApp.csproj
 
-      - name: Deploy to Azure Function
-        uses: azure/functions-action@v1
+      - name: Deploy to Azure Function App
+        uses: azure/webapps-deploy@v1
         with:
-          app-name: <YOUR-FUNCTION-APP-NAME>
-          package: ./publish
+          app-name: IntegrationToMySQL
+          slot-name: production
           publish-profile: ${{ secrets.AZURE_FUNCTIONAPP_PUBLISH_PROFILE }}
+          
+
+        
